
Commands

- Added option Global to "Implicit Arguments" and "Arguments Scope" for
  section surviving.
- Added option "Unset Elimination Schemes" to deactivated the automatic
  generation of elimination schemes.

Libraries

- Better computational behavior of some constants (eq_nat_dec more
  efficient, Z_lt_le_dec transparent, ...) [exceptionally source of
  incompatibilities].

Notations

- Level "constr" moved from 9 to 8.

Tactic Language

- Second-order pattern-matching now working in Ltac "match" clauses
  (syntax for second-order unification variable is "@?X").
- Ltac accepts integer arguments (syntax is "ltac:nnn" for nnn an integer)
- The general sequence tactical "expr_0 ; [ expr_1 | ... | expr_n ]"
  is extended so that at most one expr_i may have the form "expr .."
  or just "..". Also, n can be different from the number of subgoals
  generated by expr_0. In this case, the value of expr (or idtac in
  case of just "..") is applied to the intermediate subgoals to make
  the number of tactics equal to the number of subgoals.

Tactics

- New tactics [apply -> term], [apply <- term], [apply -> term in
  ident], [apply <- term in ident] for applying equivalences (iff).
- Slight improvement of the hnf and simpl tactics when applied on
  expressions with explicit occurrences of match or fix.
- Better heuristic of lemma unfolding for apply/eapply.
- New tactics "eapply in", "erewrite", "erewrite in".

Changes from V8.1gamma to V8.1
==============================

Bug fixes

- Many bugs have been fixed (cf coq-bugs web page)

Tactics

- New tactics ring, ring_simplify and new tactic field now able to manage
  power to a positive integer constant. Tactic ring on Z and R, and
  field on R manage power (may lead to incompatibilities with V8.1gamma).
- Tactic field_simplify now applicable in hypotheses.
- New field_simplify_eq for simplifying field equations into ring equations.
- Tactics ring, ring_simplify, field, field_simplify and field_simplify_eq 